post request routing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <!-- APPLICATION SCRIPTS -->
     <script src="base.js"></script>
 
-    <link rel="icon" type="image/png" href="grumpy.jpg">
+    <link rel="icon" type="image/png" href="/public/grumpy.jpg">
     
   </head>
   <body>
